<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WaterProject</string>
    <string name="current_question">Test Question</string>
    <string name="action_settings">Settings</string>
    <string name="main_button">Submit Answer</string>
    <string name="string_A">Answer A</string>
    <string name="string_B">Answer B</string>
    <string name="string_C">Answer C</string>
    <string name="string_D">Answer D</string>
    <string name="string_result"></string>
    <string name="next_button">Next Question</string>

</resources>
