<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softwarezygote.waterproject.app.MainActivity">

    <!-- Main text, eventually question text -->
    <TextView
        android:id="@+id/questions"
        android:text="@string/current_question"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <!-- The possible answers -->
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questions"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_A"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_B"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_C"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_D"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>





    <!-- Load the next question -->
    <Button
        android:id="@+id/next_button"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:layout_alignParentBottom="true"
        android:text="@string/next_button" />

    <!-- Submit Button, should compare answer and call appropriate activity -->
    <Button
        android:id="@+id/main_button"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@id/next_button"
        android:text="@string/main_button" />

    <!-- Temporary display of the result -->
    <TextView
        android:id="@+id/display_result"
        android:text="@string/string_result"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_button"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

</RelativeLayout>
